@startuml diagrama
title Diagrama de Classes - CRUD's Administrativos (Versão Atualizada)
caption Aluno: Bernardo dos Santos Graça

' --------------------
' Classes principais
' --------------------

class Filme {
    - nome : String
    - duracao : String
    - duracaoMinutos : Integer
    - sinopse : String
    - idiomaOriginal : String 
    - anoLancamento : Integer
    - imagemPoster : String
    - trailerUrl : String
}

class Ator {
    - nome : String
}

class Genero {
    - nome : String
}

class Premio {
    - nome : String
    - categoria : String
    - ano : Integer
}

class Sala {
    - capacidade : Integer
}

class Poltrona {
    - codigo : String
}

class Sessao {
    - inicio : LocalDateTime
    - fim : LocalDateTime
    - preco : Double
    - capacidadeTotal : Integer
    - capacidadeDisponivel : Integer
}

' --------------------
' Enums
' --------------------

enum Disponibilidade {
    DISPONIVEL
    INDISPONIVEL
}

enum TipoSessao {
    DUBLADA
    LEGENDADA
}

enum ClassificacaoIndicativa {
    LIVRE
    DEZ
    DOZE
    QUATORZE
    DEZESSEIS
    DEZOITO
}

enum StatusSessao {
    EM_BREVE
    EM_EXIBICAO
    ENCERRADO
    CANCELADA
}

' --------------------
' Relacionamentos
' --------------------
Filme "*" --> "*" Ator : atores
Filme "*" --> "*" Genero : generos
Filme "1" --> "0..*" Premio : premios
Filme "*" --> "1" ClassificacaoIndicativa : classificacaoIndicativa

Ator "1" --> "0..*" Premio : premios

Sessao "*" --> "1" TipoSessao : tipo
Sessao "*" --> "1" StatusSessao : status
Sessao "*" --> "1" Filme : filme
Sessao "*" --> "*" Sala : salas

Sala "1" *--> "*" Poltrona : poltronas

Poltrona "*" --> "1" Disponibilidade : disponibilidade

@enduml